# 05-otus-cpp-basics

./: CMakeLists.txt  Max.cpp  Max.hpp  Mean.cpp  Mean.hpp  Min.cpp  Min.hpp  Pct.cpp  Pct.hpp  Std.cpp  Std.hpp  chrono_example.cpp  random_shuffle.cpp  statistics.cpp
